functions final touches and more examples. classes ..more stuff... files , dictionaries ..

--- a/advanced/Classes.ipynb
+++ b/advanced/Classes.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -320,18 +320,21 @@
     "        hello = \"hello local\"\n",
     "    \n",
     "    def change_nonlocal():\n",
-    "        nonlocal hello\n",
-    "        hello = \"hello nonlocal\"\n",
+    "        hello = \"Hello initial inside change_nonlocal\"\n",
+    "        def f():\n",
+    "            nonlocal hello\n",
+    "            hello = \"hello nonlocal\"\n",
+    "        f()\n",
     "        \n",
     "    def change_global():\n",
     "        global hello\n",
     "        hello = \"Hello global\"\n",
     "    \n",
-    "    print(\"Before change_local:\", hello)\n",
+    "    print(\"Before change_local:\", hello)# these refer to local hello from top function\n",
     "    change_local()\n",
     "    print(\"After change_local: \",hello)\n",
     "    change_nonlocal()\n",
-    "    print(\"After change_local: \",hello)\n",
+    "    print(\"After change_nonlocal: \",hello)\n",
     "    change_global()\n",
     "    print(\"After change_global: \", hello)\n",
     "    \n",
@@ -342,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -352,8 +355,8 @@
       "Initial value: Hello Initial\r\n",
       "Before change_local: hello from scope_changed()\r\n",
       "After change_local:  hello from scope_changed()\r\n",
-      "After change_local:  hello nonlocal\r\n",
-      "After change_global:  hello nonlocal\r\n",
+      "After change_nonlocal:  hello from scope_changed()\r\n",
+      "After change_global:  hello from scope_changed()\r\n",
       "Outside :  Hello global\r\n"
      ]
     }
@@ -404,6 +407,317 @@
     "    .\n",
     "    .\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "class Circle:\n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "        \n",
+    "    def area(self):\n",
+    "        return math.pi*self.radius**2\n",
+    "\n",
+    "class Square:\n",
+    "    def __init__(self, s):\n",
+    "        self.side = s\n",
+    "    \n",
+    "    def area(self):\n",
+    "        return self.side*self.side\n",
+    "    \n",
+    "class Triangle:\n",
+    "    def __init__(self, base, height):\n",
+    "        self.base = base\n",
+    "        self.height = height\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3.141592653589793, 1, 12.566370614359172, 4]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shapes = [Circle(1), Square(1), Circle(2), Square(2)]\n",
+    "areas = [s.area() for s in shapes]\n",
+    "areas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "shapes.append(Triangle(1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Triangle' object has no attribute 'area'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-a9e10ed9f43d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marea\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mshapes\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-24-a9e10ed9f43d>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marea\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mshapes\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Triangle' object has no attribute 'area'"
+     ]
+    }
+   ],
+   "source": [
+    "[s.area() for s in shapes]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Basic idea of classes in python does not work with types. It just works with atrributes. we just make use of object attributes without worrying what object it it. If attribute is not there it fails. Basic logic while implementing \n",
+    "above list comprehension was that the list contains shapes which has attribute area()."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Why Classes? ###\n",
+    "Lets try to see with simple example. Let us try to model a bank account. Initialy let it be a module with the required functions in it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing bank0.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file bank0.py\n",
+    "\n",
+    "balance = 0\n",
+    "\n",
+    "def deposit(amount):\n",
+    "    global balance\n",
+    "    balance = balance + amount\n",
+    "\n",
+    "def withdraw(amount):\n",
+    "    global balance\n",
+    "    balance = balance - amount\n",
+    "\n",
+    "def get_balance():\n",
+    "    return balance\n",
+    "\n",
+    "def main():\n",
+    "    deposit(100)\n",
+    "    withdraw(40)\n",
+    "    print(get_balance())\n",
+    "    \n",
+    "    deposit(20)\n",
+    "    print(get_balance())\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\r\n",
+      "80\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python bank0.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But what if we want to model multiple accounts? the bank0 module allows only one instance of banck account."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing bank1.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file bank1.py\n",
+    "\"\"\"Implementation of bank accounts with support for multiple accounts.\n",
+    "\"\"\"\n",
+    "\n",
+    "def make_account():\n",
+    "    return {\"balance\": 0}\n",
+    "\n",
+    "def deposit(account, amount):\n",
+    "    account[\"balance\"] += amount\n",
+    "\n",
+    "def withdraw(account, amount):\n",
+    "    account[\"balance\"] -= amount\n",
+    "    \n",
+    "def get_balance(account):\n",
+    "    return account[\"balance\"]\n",
+    "\n",
+    "def main():\n",
+    "    a1 = make_account()\n",
+    "    a2 = make_account()\n",
+    "    \n",
+    "    deposit(a1, 100)\n",
+    "    deposit(a2, 50)\n",
+    "    print(get_balance(a1), get_balance(a2))\n",
+    "    \n",
+    "    withdraw(a1, 30)\n",
+    "    withdraw(a2, 20)\n",
+    "    print(get_balance(a1), get_balance(a2))\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 50\r\n",
+      "70 30\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python bank1.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- functions **manipulate** data nicely, while classes **model** the data nicely. A class is a great way of describing what something is rather than manipulating data. Above example shows that you can model data even with functions. but now lets try it using classes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing bank2.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file bank2.py\n",
+    "\"\"\"Class-based implementation of bank account.\n",
+    "\"\"\"\n",
+    "\n",
+    "class BankAccount:\n",
+    "    def __init__(self):\n",
+    "        self.balance = 0\n",
+    "\n",
+    "    def deposit(self, amount):\n",
+    "        self.balance += amount\n",
+    "\n",
+    "    def withdraw(self, amount):\n",
+    "        self.balance -= amount\n",
+    "\n",
+    "    def get_balance(self):\n",
+    "        return self.balance\n",
+    "\n",
+    "def main():\n",
+    "    a1 = BankAccount()\n",
+    "    a2 = BankAccount()\n",
+    "    \n",
+    "    a1.deposit(100)\n",
+    "    a2.deposit(50)\n",
+    "    print(a1.get_balance(), a2.get_balance())\n",
+    "    \n",
+    "    a1.withdraw(30)\n",
+    "    a2.withdraw(20)\n",
+    "    print(a1.get_balance(), a2.get_balance())\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 50\r\n",
+      "70 30\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python bank2.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- If you have a number of related functions that you just want to bundle, a module will be do the work.\n",
+    "- The purpose of a class is to bundle a data structure which represents some logical entity with the operations that work with this data structure.\n",
+    "- One of the big advantages of using OOP is extensibility."
    ]
   },
   {
@@ -558,7 +872,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x.myown_value = 43"
@@ -764,7 +1080,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that `outside_increment` and `A.increment` are actually same, but writing a function outside class is only confusing but not useful. "
+    "Note that `outside_increment` and `A.increment` are actually same, but writing a function outside class is only confusing but not adding extra usefulness. "
    ]
   },
   {
