--- a/foundation/Foundation2.ipynb
+++ b/foundation/Foundation2.ipynb
@@ -2812,7 +2812,7 @@
     "    assert usual_way_polynomial([1,1,1], 0) == 1\n",
     "    assert usual_way_polynomial([1,1,1], 1) == 3\n",
     "    assert usual_way_polynomial([1,1,1], 2) == 7\n",
-    "    assert usual_way_polynomial([], 1) == 1\n",
+    "    assert usual_way_polynomial([], 1) == 1 #making it failure to see the failed test\n",
     "    \n",
     "def test_make_poly():\n",
     "    coeff0 = []\n",
@@ -3334,7 +3334,9 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def print_pascal(base):\n",
