--- a/advanced/Functions.ipynb
+++ b/advanced/Functions.ipynb
@@ -1645,20 +1645,255 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "What is the easiest and surest way of debugging? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def add(x,y):\n",
+    "    print(\"add\", x,y)\n",
+    "    return x+y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "isn't it? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sub(x,y):\n",
+    "                #<---print(\"sub\", x,y)\n",
+    "    return x - y\n",
+    "\n",
+    "def mult(x,y):\n",
+    "                #<---print(\"mult\", x, y)\n",
+    "\n",
+    "def fib(n):\n",
+    "                #<---print(\"fib\", n)\n",
+    "    if n in [1,2]:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fib(n-1) + fib(n-2)\n",
+    "#what if we want to debug at many places to find out some bug!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fib 6\n",
+      "fib 5\n",
+      "fib 4\n",
+      "fib 3\n",
+      "fib 2\n",
+      "fib 1\n",
+      "fib 2\n",
+      "fib 3\n",
+      "fib 2\n",
+      "fib 1\n",
+      "fib 4\n",
+      "fib 3\n",
+      "fib 2\n",
+      "fib 1\n",
+      "fib 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fib(6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It will be helpful if there is any mechanism to write wrapper arround function to do some\n",
+    "```\n",
+    "def debug(func):\n",
+    "    #do some additional stuff \n",
+    "    #...\n",
+    "    # call func!\n",
+    "```    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def debug(func):\n",
+    "    def wrapper(*args):\n",
+    "        print(\"DEBUG : === \",func, args)\n",
+    "        return func(*args)\n",
+    "        \n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newadd = debug(add)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEBUG : ===  <function debug.<locals>.wrapper at 0x7f118c5dc158> (2, 3)\n",
+      "DEBUG : ===  <function add at 0x7f118c6c5268> (2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "newadd(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add = debug(add)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEBUG : ===  <function add at 0x7f118c6c5268> (3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "add(3,4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "syntactic sugar for above procedure is"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@debug\n",
+    "def fib(n):\n",
+    "    if n in [1,2]:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fib(n-1) + fib(n-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEBUG : ===  <function fib at 0x7f118c5acd08> (5,)\n",
+      "DEBUG : ===  <function fib at 0x7f118c5acd08> (4,)\n",
+      "DEBUG : ===  <function fib at 0x7f118c5acd08> (3,)\n",
+      "DEBUG : ===  <function fib at 0x7f118c5acd08> (2,)\n",
+      "DEBUG : ===  <function fib at 0x7f118c5acd08> (1,)\n",
+      "DEBUG : ===  <function fib at 0x7f118c5acd08> (2,)\n",
+      "DEBUG : ===  <function fib at 0x7f118c5acd08> (3,)\n",
+      "DEBUG : ===  <function fib at 0x7f118c5acd08> (2,)\n",
+      "DEBUG : ===  <function fib at 0x7f118c5acd08> (1,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fib(5)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -1679,7 +1914,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
